# handeye_calib

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: camera_info.example.yaml
data/sample/: apriltag_franka_snapshots_example.json
scripts/: click_test.py  estimate_extrinsic.py  record_snapshots.py
src/handeye_calib/: __init__.py  detection.py  fk.py  geometry.py  projection.py  recorder.py  robots.py  solver.py
